--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -1,8 +1,6 @@
 name: Run tests on any Push event
 on:
   push:
-    tags:
-      - '!refs/tags/*'
     branches:
       - '*'
 jobs:
@@ -21,9 +19,6 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-      - name: echo workspace
-        run: echo $GITHUB_WORKSPACE
-        shell: bash
       - name: Run tests
         run: |
-          python -m unittest tests.test_mini_api.TestAPIEndpoints
+          python -m unittest tests.test_mini_api.TestAPIEndpoints -v
