--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -4,6 +4,13 @@ on:
     branches:
       - '*'
 jobs:
+  lint_src:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: psf/black@stable 
+        with:
+          options: "--check --verbose"
+          src: "./src"
   run_tests:
     runs-on: [ubuntu-latest]
     strategy:
