--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -7,9 +7,11 @@ jobs:
   lint_src:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: psf/black@stable 
         with:
           options: "--check --verbose"
+          src: "./src"
   run_tests:
     runs-on: [ubuntu-latest]
     strategy:
