--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -10,6 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: psf/black@stable 
         with:
+          options: "--verbose"
           src: "./src"
           version: "~= 22.0"
 
