--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -8,11 +8,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: psf/black@stable 
+      - name: Set up Python 3.x
+        uses: actions/setup-python@v2
         with:
-          options: "--verbose"
-          src: "./src"
-          version: "~= 22.0"
+          python-version: '3.x'
+      - name: Install flake8
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8
+      # Would reformat but would not update the current repo
+      # Use this code formater before pushing your code
+      # - uses: psf/black@stable 
+      #   with:
+      #     options: "--verbose"
+      #     src: "./src"
+      #     version: "~= 22.0"
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          # flake8 flaskr --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 flaskr --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   run_tests:
     runs-on: [ubuntu-latest]
