--- a/.github/workflows/test_on_push.yaml
+++ b/.github/workflows/test_on_push.yaml
@@ -1,34 +1,34 @@
-# name: Run tests on any Push event
-# on:
-#   push:
-#     branches:
-#       - '*'
-# jobs:
-#   lint_src:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v3
-#       - name: Set up Python 3.x
-#         uses: actions/setup-python@v2
-#         with:
-#           python-version: '3.x'
-#       - name: Install and Run flake8
-#         run: |
-#           python -m pip install --upgrade pip
-#           pip install flake8
-#       # Would reformat but would not update the current repo
-#       # Use this code formater before pushing your code
-#       # - uses: psf/black@stable 
-#       #   with:
-#       #     options: "--verbose"
-#       #     src: "./src"
-#       #     version: "~= 22.0"
-#       - name: Lint with flake8
-#         run: |
-#           # stop the build if there are Python syntax errors or undefined names
-#           # flake8 flaskr --count --select=E9,F63,F7,F82 --show-source --statistics
-#           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-#           flake8 src/mini_api.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+name: Run tests on any Push event
+on:
+  push:
+    branches:
+      - '*'
+jobs:
+  # lint_src:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Set up Python 3.x
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: '3.x'
+  #     - name: Install and Run flake8
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install flake8
+      # Would reformat but would not update the current repo
+      # Use this code formater before pushing your code
+      # - uses: psf/black@stable 
+      #   with:
+      #     options: "--verbose"
+      #     src: "./src"
+      #     version: "~= 22.0"
+      # - name: Lint with flake8
+      #   run: |
+      #     # stop the build if there are Python syntax errors or undefined names
+      #     # flake8 flaskr --count --select=E9,F63,F7,F82 --show-source --statistics
+      #     # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+      #     flake8 src/mini_api.py --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
   run_tests:
     runs-on: [ubuntu-latest]
