--- a/.github/workflows/push_on_prod.yaml
+++ b/.github/workflows/push_on_prod.yaml
@@ -1,7 +1,7 @@
-name: DEV - Build and Unittest
+name: push on prod and deploy docker
 on:
   push:
-    branches-ignore: [ main ]
+    branches: [ main ]
   
 jobs:
   # lint_src:
@@ -56,3 +56,20 @@ jobs:
       - name: Run tests
         run: |
           python -m unittest tests.test_mini_api.TestAPIEndpoints -v
+
+  deploy:
+    needs: [run_tests]
+    runs-on: ubuntu-latest
+    environment: env-cicd
+    steps:
+      - uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build Docker image
+        run: docker build . -t mgrum/flask-example-cicd:latest
+      - name: Push Docker image
+        run: docker push mgrum/flask-example-cicd:latest
+
