--- a/.github/workflows/push_on_prod.yaml
+++ b/.github/workflows/push_on_prod.yaml
@@ -69,7 +69,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build Docker image
-        run: docker build . -t mgrum/flask-example-cicd:latest
+        run: docker build . -t loxdocker/mini-flask-app-demo:prod
       - name: Push Docker image
-        run: docker push mgrum/flask-example-cicd:latest
+        run: docker push loxdocker/mini-flask-app-demo:prod
 
